--- a/.github/workflows/mrpack.yml
+++ b/.github/workflows/mrpack.yml
@@ -14,10 +14,10 @@ jobs:
         repo: packwiz/packwiz
         name: Linux 64-bit x86
         latest: true
-        path: /usr/bin
+        path: /tmp
     - name: Build Pack
       run: |
-        /usr/bin/packwiz modrinth export -o minebox.mrpack
+        /tmp/packwiz modrinth export -o minebox.mrpack
     - name: Upload Artifact
       uses: actions/upload-artifact@v4
       with:
