--- a/.github/workflows/mrpack.yml
+++ b/.github/workflows/mrpack.yml
@@ -29,6 +29,7 @@ jobs:
         if-no-files-found: error
   publish-pack:
     runs-on: ubuntu-latest
+    needs: build-pack
     if: github.event.action == 'release'
     environment: Modrinth
     steps:
