--- a/mods/ambientsounds.pw.toml
+++ b/mods/ambientsounds.pw.toml
@@ -1,13 +1,13 @@
 name = "AmbientSounds"
-filename = "AmbientSounds_FORGE_v6.0.3_mc1.20.1.jar"
+filename = "AmbientSounds_FORGE_v6.0.5_mc1.20.1.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/fM515JnW/versions/h5nUJIV3/AmbientSounds_FORGE_v6.0.3_mc1.20.1.jar"
+url = "https://cdn.modrinth.com/data/fM515JnW/versions/aL1geWu6/AmbientSounds_FORGE_v6.0.5_mc1.20.1.jar"
 hash-format = "sha1"
-hash = "257128e4256f29d281b62480e3c7d300b020f599"
+hash = "c18ae5e7b9d07c783bc1357cc7c957f58aa8a1e4"
 
 [update]
 [update.modrinth]
 mod-id = "fM515JnW"
-version = "h5nUJIV3"
+version = "aL1geWu6"
