--- a/mods/cc-tweaked.pw.toml
+++ b/mods/cc-tweaked.pw.toml
@@ -1,13 +1,13 @@
 name = "CC: Tweaked"
-filename = "cc-tweaked-1.20.1-forge-1.112.0.jar"
+filename = "cc-tweaked-1.20.1-forge-1.113.0.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/gu7yAYhd/versions/OZK5YfY2/cc-tweaked-1.20.1-forge-1.112.0.jar"
+url = "https://cdn.modrinth.com/data/gu7yAYhd/versions/M7937F0z/cc-tweaked-1.20.1-forge-1.113.0.jar"
 hash-format = "sha1"
-hash = "c4cf7534e616addddc4ee71f7c48efddf2d49eed"
+hash = "0719de28019600e2d7ac8c9debe4c851a1905fe9"
 
 [update]
 [update.modrinth]
 mod-id = "gu7yAYhd"
-version = "OZK5YfY2"
+version = "M7937F0z"
