--- a/mods/chat-heads.pw.toml
+++ b/mods/chat-heads.pw.toml
@@ -1,13 +1,13 @@
 name = "Chat Heads"
-filename = "chat_heads-0.12.10-forge-1.20.jar"
+filename = "chat_heads-0.12.13-forge-1.20.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/Wb5oqrBJ/versions/jKG3sAOi/chat_heads-0.12.10-forge-1.20.jar"
+url = "https://cdn.modrinth.com/data/Wb5oqrBJ/versions/UAyGyQNE/chat_heads-0.12.13-forge-1.20.jar"
 hash-format = "sha1"
-hash = "062b07be0a91555e0750bc155d2585122b7690ac"
+hash = "4336cfb8f7b93d6dfac71713df475e8ed819b2df"
 
 [update]
 [update.modrinth]
 mod-id = "Wb5oqrBJ"
-version = "jKG3sAOi"
+version = "UAyGyQNE"
