--- a/mods/entityculling.pw.toml
+++ b/mods/entityculling.pw.toml
@@ -1,13 +1,13 @@
 name = "Entity Culling"
-filename = "entityculling-forge-1.6.6-mc1.20.1.jar"
+filename = "entityculling-forge-1.6.7-mc1.20.1.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/NNAgCjsB/versions/DHBIGCNn/entityculling-forge-1.6.6-mc1.20.1.jar"
+url = "https://cdn.modrinth.com/data/NNAgCjsB/versions/KGMvyJTe/entityculling-forge-1.6.7-mc1.20.1.jar"
 hash-format = "sha1"
-hash = "cc2e44cd3260f98ef35297854e5154a36add36cc"
+hash = "f73a905384aa083006b62e76013be9313c832933"
 
 [update]
 [update.modrinth]
 mod-id = "NNAgCjsB"
-version = "DHBIGCNn"
+version = "KGMvyJTe"
