--- a/mods/jei.pw.toml
+++ b/mods/jei.pw.toml
@@ -1,13 +1,13 @@
 name = "Just Enough Items"
-filename = "jei-1.20.1-forge-15.12.1.46.jar"
+filename = "jei-1.20.1-forge-15.12.3.55.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/u6dRKJwZ/versions/vDcPRfvM/jei-1.20.1-forge-15.12.1.46.jar"
+url = "https://cdn.modrinth.com/data/u6dRKJwZ/versions/OATFVg0W/jei-1.20.1-forge-15.12.3.55.jar"
 hash-format = "sha1"
-hash = "994d48cd511f1a56a3c6ef28592fa6153fbbcb6c"
+hash = "da21c5be7804873cdcc4141a88526ce4abdcb26c"
 
 [update]
 [update.modrinth]
 mod-id = "u6dRKJwZ"
-version = "vDcPRfvM"
+version = "OATFVg0W"
