--- a/mods/moonlight.pw.toml
+++ b/mods/moonlight.pw.toml
@@ -1,13 +1,13 @@
 name = "Moonlight Lib"
-filename = "moonlight-1.20-2.12.9-forge.jar"
+filename = "moonlight-1.20-2.12.14-forge.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/twkfQtEc/versions/DJ6tP5np/moonlight-1.20-2.12.9-forge.jar"
+url = "https://cdn.modrinth.com/data/twkfQtEc/versions/tdYywzk0/moonlight-1.20-2.12.14-forge.jar"
 hash-format = "sha1"
-hash = "aee1b770b42d29eef2214f8c531a9dd82d264a12"
+hash = "8ccead7247f2b3019a7809446ff2c81dbdd0b516"
 
 [update]
 [update.modrinth]
 mod-id = "twkfQtEc"
-version = "DJ6tP5np"
+version = "tdYywzk0"
