--- a/mods/noisium.pw.toml
+++ b/mods/noisium.pw.toml
@@ -1,13 +1,14 @@
 name = "Noisium"
-filename = "noisium-merged-2.0.1+mc1.20.x.jar"
+filename = "noisium-forge-2.2.2+mc1.20-1.20.1.jar"
 side = "server"
+pin = true
 
 [download]
-url = "https://cdn.modrinth.com/data/KuNKN7d2/versions/AfjBJbK1/noisium-merged-2.0.1%2Bmc1.20.x.jar"
+url = "https://cdn.modrinth.com/data/KuNKN7d2/versions/xwm7o9FD/noisium-forge-2.2.2%2Bmc1.20-1.20.1.jar"
 hash-format = "sha1"
-hash = "1f51eb9613a49ee421d839ccb7c9f004b534dcaf"
+hash = "c96a496e29bbe4f5afbc47f3c5c13b785a2fd065"
 
 [update]
 [update.modrinth]
 mod-id = "KuNKN7d2"
-version = "AfjBJbK1"
+version = "xwm7o9FD"
