--- a/mods/wthit.pw.toml
+++ b/mods/wthit.pw.toml
@@ -1,13 +1,13 @@
 name = "WTHIT"
-filename = "wthit-forge-8.13.4.jar"
+filename = "wthit-forge-8.14.0.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/6AQIaxuO/versions/y6tcktnP/wthit-forge-8.13.4.jar"
+url = "https://cdn.modrinth.com/data/6AQIaxuO/versions/h8PMHnUN/wthit-forge-8.14.0.jar"
 hash-format = "sha1"
-hash = "799cd11445b94b688f32c0513f7a27a50500b5cc"
+hash = "f4ce2e2110eb25f420a109d9ee3051b969aa90f8"
 
 [update]
 [update.modrinth]
 mod-id = "6AQIaxuO"
-version = "y6tcktnP"
+version = "h8PMHnUN"
