--- a/mods/fast-ip-ping.pw.toml
+++ b/mods/fast-ip-ping.pw.toml
@@ -1,13 +1,13 @@
 name = "fast-ip-ping"
-filename = "fast-ip-ping-mc1.20.4-forge-v1.0.3.jar"
+filename = "fast-ip-ping-v1.0.4-mc1.20.4-forge.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/9mtu0sUO/versions/bIaMwV7B/fast-ip-ping-mc1.20.4-forge-v1.0.3.jar"
+url = "https://cdn.modrinth.com/data/9mtu0sUO/versions/BOVLchgc/fast-ip-ping-v1.0.4-mc1.20.4-forge.jar"
 hash-format = "sha1"
-hash = "8fbc2176dfc931741a4d7b1213393d2fe893758c"
+hash = "13d42a0e4fcb7b7fd1821108bf496c8901d7df3d"
 
 [update]
 [update.modrinth]
 mod-id = "9mtu0sUO"
-version = "bIaMwV7B"
+version = "BOVLchgc"
