--- a/mods/moonlight.pw.toml
+++ b/mods/moonlight.pw.toml
@@ -1,13 +1,13 @@
 name = "Moonlight Lib"
-filename = "moonlight-1.20-2.12.14-forge.jar"
+filename = "moonlight-1.20-2.12.17-forge.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/twkfQtEc/versions/tdYywzk0/moonlight-1.20-2.12.14-forge.jar"
+url = "https://cdn.modrinth.com/data/twkfQtEc/versions/dOvJC4t8/moonlight-1.20-2.12.17-forge.jar"
 hash-format = "sha1"
-hash = "8ccead7247f2b3019a7809446ff2c81dbdd0b516"
+hash = "e1f740f198248f04699fcf635051bebdbc9d1c3b"
 
 [update]
 [update.modrinth]
 mod-id = "twkfQtEc"
-version = "tdYywzk0"
+version = "dOvJC4t8"
