--- a/config/bcc-common.toml
+++ b/config/bcc-common.toml
@@ -7,7 +7,7 @@
 	#The name of the modpack
 	modpackName = "Minebox Neo"
 	#The version of the modpack
-	modpackVersion = "3.0.10b+forge.47.2.0"
+	modpackVersion = "3.0.11+forge.47.3.6"
 	#Use the metadata.json to determine the modpack version
 	#ONLY ENABLE THIS IF YOU KNOW WHAT YOU ARE DOING
 	useMetadata = false
