--- a/mods/snow-under-trees.pw.toml
+++ b/mods/snow-under-trees.pw.toml
@@ -1,6 +1,6 @@
 name = "Snow Under Trees"
 filename = "snowundertrees-1.20.1-1.4.4.jar"
-side = "server"
+side = "both"
 
 [download]
 url = "https://cdn.modrinth.com/data/Q3vyMuj2/versions/jaKOCf56/snowundertrees-1.20.1-1.4.4.jar"
