--- a/mods/antique-atlas-4.pw.toml
+++ b/mods/antique-atlas-4.pw.toml
@@ -1,6 +1,6 @@
 name = "Antique Atlas 4"
 filename = "antique-atlas-2.9.17+1.20.jar"
-side = "client"
+side = "both"
 
 [download]
 url = "https://cdn.modrinth.com/data/Y5Ve4Ui4/versions/9Olt7kwm/antique-atlas-2.9.17%2B1.20.jar"
