--- a/mods/badoptimizations.pw.toml
+++ b/mods/badoptimizations.pw.toml
@@ -1,6 +1,6 @@
 name = "BadOptimizations"
 filename = "BadOptimizations-2.1.4-1.20.1.jar"
-side = "client"
+side = "both"
 
 [download]
 url = "https://cdn.modrinth.com/data/g96Z4WVZ/versions/GydKiUd0/BadOptimizations-2.1.4-1.20.1.jar"
