--- a/mods/inventory-profiles-next.pw.toml
+++ b/mods/inventory-profiles-next.pw.toml
@@ -1,6 +1,6 @@
 name = "Inventory Profiles Next"
 filename = "InventoryProfilesNext-forge-1.20-1.10.10.jar"
-side = "client"
+side = "both"
 
 [download]
 url = "https://cdn.modrinth.com/data/O7RBXm3n/versions/C2l2XSyM/InventoryProfilesNext-forge-1.20-1.10.10.jar"
