--- a/mods/libipn.pw.toml
+++ b/mods/libipn.pw.toml
@@ -1,6 +1,6 @@
 name = "libIPN"
 filename = "libIPN-forge-1.20-4.0.2.jar"
-side = "client"
+side = "both"
 
 [download]
 url = "https://cdn.modrinth.com/data/onSQdWhM/versions/pdAXmKcS/libIPN-forge-1.20-4.0.2.jar"
