--- a/mods/emitrades.pw.toml
+++ b/mods/emitrades.pw.toml
@@ -1,6 +1,6 @@
 name = "EMI Trades"
 filename = "emitrades-forge-1.2.1+mc1.20.1.jar"
-side = "client"
+side = "both"
 
 [download]
 url = "https://cdn.modrinth.com/data/j2HhbEE7/versions/LBT7pcVH/emitrades-forge-1.2.1%2Bmc1.20.1.jar"
