--- a/config/voicechat/voicechat-client.properties
+++ b/config/voicechat/voicechat-client.properties
@@ -1,7 +1,7 @@
 # Simple Voice Chat client config v1.20.1-2.5.19
 
 # If the voice chat onboarding process has been finished
-onboarding_finished=true
+onboarding_finished=false
 # The voice chat volume
 voice_chat_volume=1.0
 # The threshold for voice activation in dB
@@ -24,10 +24,10 @@ audio_packet_threshold=3
 voice_deactivation_delay=25
 # The microphone used by the voice chat
 # Empty for default device
-microphone=OpenAL Soft on Microphone (USB2.0 Microphone)
+microphone=
 # The speaker used by the voice chat
 # Empty for default device
-speaker=OpenAL Soft on Headphones (WH-XB900N)
+speaker=
 # If the microphone is muted (only when using voice activation)
 muted=true
 # If the voice chat is disabled (sound and microphone off)
@@ -85,6 +85,6 @@ use_natives=true
 # Possible values are 'CAMERA' and 'PLAYER'
 # CAMERA: You will hear voice chat audio around your camera. Whether you hear distant audio depends on the voice chat broadcast range of the server
 # PLAYER: You will hear voice chat audio around your player no matter where your camera is
-freecam_mode=CAMERA
+freecam_mode=PLAYER
 # If enabled, you will be automatically muted when joining a world
 mute_on_join=false
