--- a/config/bcc-common.toml
+++ b/config/bcc-common.toml
@@ -7,7 +7,7 @@
 	#The name of the modpack
 	modpackName = "Minebox Neo"
 	#The version of the modpack
-	modpackVersion = "3.0.11"
+	modpackVersion = "3.0.11b"
 	#Use the metadata.json to determine the modpack version
 	#ONLY ENABLE THIS IF YOU KNOW WHAT YOU ARE DOING
 	useMetadata = false
