--- a/mods/elytra-trims.pw.toml
+++ b/mods/elytra-trims.pw.toml
@@ -1,13 +1,13 @@
 name = "Elytra Trims"
-filename = "elytratrims-forge-3.4.4+1.20.1.jar"
+filename = "elytratrims-forge-3.5.2+1.20.1.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/XpzGz7KD/versions/Wf6ShWf5/elytratrims-forge-3.4.4%2B1.20.1.jar"
+url = "https://cdn.modrinth.com/data/XpzGz7KD/versions/HLQh7QCE/elytratrims-forge-3.5.2%2B1.20.1.jar"
 hash-format = "sha1"
-hash = "ab3bd39ef683f513f89889580d0eeea11b65cf96"
+hash = "0582bb17b7cd76f562104c565f6ce86f93b45594"
 
 [update]
 [update.modrinth]
 mod-id = "XpzGz7KD"
-version = "Wf6ShWf5"
+version = "HLQh7QCE"
