--- a/mods/gravestone-mod.pw.toml
+++ b/mods/gravestone-mod.pw.toml
@@ -1,13 +1,13 @@
 name = "GraveStone Mod"
-filename = "gravestone-forge-1.20.1-1.0.21.jar"
+filename = "gravestone-forge-1.20.1-1.0.23.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/RYtXKJPr/versions/Q3m9gCoC/gravestone-forge-1.20.1-1.0.21.jar"
+url = "https://cdn.modrinth.com/data/RYtXKJPr/versions/No7NPOP4/gravestone-forge-1.20.1-1.0.23.jar"
 hash-format = "sha1"
-hash = "52e66870fcfe37cef9e4705fc92cc8d13adf0044"
+hash = "0b9ad824cdafa636255ad2ccf4c8fc42d397e687"
 
 [update]
 [update.modrinth]
 mod-id = "RYtXKJPr"
-version = "Q3m9gCoC"
+version = "No7NPOP4"
