--- a/mods/moonlight.pw.toml
+++ b/mods/moonlight.pw.toml
@@ -1,6 +1,7 @@
 name = "Moonlight Lib"
 filename = "moonlight-1.20-2.12.17-forge.jar"
 side = "both"
+pin = true
 
 [download]
 url = "https://cdn.modrinth.com/data/twkfQtEc/versions/dOvJC4t8/moonlight-1.20-2.12.17-forge.jar"
