--- a/mods/simple-voice-chat.pw.toml
+++ b/mods/simple-voice-chat.pw.toml
@@ -1,13 +1,13 @@
 name = "Simple Voice Chat"
-filename = "voicechat-forge-1.20.1-2.5.20.jar"
+filename = "voicechat-forge-1.20.1-2.5.21.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/9eGKb6K1/versions/YCkayLXA/voicechat-forge-1.20.1-2.5.20.jar"
+url = "https://cdn.modrinth.com/data/9eGKb6K1/versions/MMNMG8fr/voicechat-forge-1.20.1-2.5.21.jar"
 hash-format = "sha1"
-hash = "c5a2b8c36ae4548cbfb566002d809d2e46823d3b"
+hash = "dcb95dde550c07c5dcec9c0e613ea95420ab9c16"
 
 [update]
 [update.modrinth]
 mod-id = "9eGKb6K1"
-version = "YCkayLXA"
+version = "MMNMG8fr"
