--- a/mods/chat-heads.pw.toml
+++ b/mods/chat-heads.pw.toml
@@ -1,13 +1,13 @@
 name = "Chat Heads"
-filename = "chat_heads-0.12.13-forge-1.20.jar"
+filename = "chat_heads-0.13.0-forge-1.20.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/Wb5oqrBJ/versions/UAyGyQNE/chat_heads-0.12.13-forge-1.20.jar"
+url = "https://cdn.modrinth.com/data/Wb5oqrBJ/versions/CuE3zOb8/chat_heads-0.13.0-forge-1.20.jar"
 hash-format = "sha1"
-hash = "4336cfb8f7b93d6dfac71713df475e8ed819b2df"
+hash = "bc523ef699677f372cc22b0d9eed2a59a4b0d97b"
 
 [update]
 [update.modrinth]
 mod-id = "Wb5oqrBJ"
-version = "UAyGyQNE"
+version = "CuE3zOb8"
