--- a/mods/create-tfmg.pw.toml
+++ b/mods/create-tfmg.pw.toml
@@ -1,13 +1,13 @@
 name = "Create: The Factory Must Grow"
-filename = "tfmg-0.9.1c-1.20.1.jar"
+filename = "tfmg-0.9.2-1.20.1.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/USgVjXsk/versions/qBc7nHJY/tfmg-0.9.1c-1.20.1.jar"
+url = "https://cdn.modrinth.com/data/USgVjXsk/versions/AbYallsC/tfmg-0.9.2-1.20.1.jar"
 hash-format = "sha1"
-hash = "cab35cd427a801bc6bae274069b012aa671ee1f7"
+hash = "56a99b6e5bbe3130ab2e7101d2b40c7ef0862bd8"
 
 [update]
 [update.modrinth]
 mod-id = "USgVjXsk"
-version = "qBc7nHJY"
+version = "AbYallsC"
