--- a/mods/dynamic-fps.pw.toml
+++ b/mods/dynamic-fps.pw.toml
@@ -1,13 +1,13 @@
 name = "Dynamic FPS"
-filename = "dynamic-fps-3.6.3+minecraft-1.20.0-forge.jar"
+filename = "dynamic-fps-3.7.1+minecraft-1.20.0-forge.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/LQ3K71Q1/versions/MO25GW56/dynamic-fps-3.6.3%2Bminecraft-1.20.0-forge.jar"
+url = "https://cdn.modrinth.com/data/LQ3K71Q1/versions/xcw5AkDc/dynamic-fps-3.7.1%2Bminecraft-1.20.0-forge.jar"
 hash-format = "sha1"
-hash = "c8b589a8f7c6c2455f2d607ee913b0dd96c4c945"
+hash = "e171f940af7cf5ad3614fd3f75ddb1cc01d660e5"
 
 [update]
 [update.modrinth]
 mod-id = "LQ3K71Q1"
-version = "MO25GW56"
+version = "xcw5AkDc"
