--- a/mods/emi-loot.pw.toml
+++ b/mods/emi-loot.pw.toml
@@ -1,13 +1,13 @@
 name = "EMI Loot"
-filename = "emi_loot-0.6.6+fix3+1.20.1+forge.jar"
+filename = "emi_loot-0.7.3+1.20.1+forge.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/qbbO7Jns/versions/ZkDaJFMU/emi_loot-0.6.6%2Bfix3%2B1.20.1%2Bforge.jar"
+url = "https://cdn.modrinth.com/data/qbbO7Jns/versions/oQKduNIL/emi_loot-0.7.3%2B1.20.1%2Bforge.jar"
 hash-format = "sha1"
-hash = "d0fbb7de06123b4bbc9e2558d27a4ccb2f6826fc"
+hash = "de9fdbcc53e6ab47d4876451e00ea38a8af397dd"
 
 [update]
 [update.modrinth]
 mod-id = "qbbO7Jns"
-version = "ZkDaJFMU"
+version = "oQKduNIL"
