--- a/mods/harvest-with-ease.pw.toml
+++ b/mods/harvest-with-ease.pw.toml
@@ -1,13 +1,13 @@
 name = "Harvest with ease"
-filename = "harvest-with-ease-forge-1.20.1-9.1.0.jar"
+filename = "harvest-with-ease-forge-1.20.1-9.1.1.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/W4Ajthd2/versions/o85yM6qn/harvest-with-ease-forge-1.20.1-9.1.0.jar"
+url = "https://cdn.modrinth.com/data/W4Ajthd2/versions/hON90eFc/harvest-with-ease-forge-1.20.1-9.1.1.jar"
 hash-format = "sha1"
-hash = "331d79964a797a97da3b3acc67393434bfab34c4"
+hash = "783e03233dc18133b34ce53561ecedb6d9fb7ea4"
 
 [update]
 [update.modrinth]
 mod-id = "W4Ajthd2"
-version = "o85yM6qn"
+version = "hON90eFc"
