--- a/mods/immersive-aircraft.pw.toml
+++ b/mods/immersive-aircraft.pw.toml
@@ -1,13 +1,13 @@
 name = "Immersive Aircraft"
-filename = "immersive_aircraft-1.0.1+1.20.1-forge.jar"
+filename = "immersive_aircraft-1.1.2+1.20.1-forge.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/x3HZvrj6/versions/Tju2o3p2/immersive_aircraft-1.0.1%2B1.20.1-forge.jar"
+url = "https://cdn.modrinth.com/data/x3HZvrj6/versions/IxkG37te/immersive_aircraft-1.1.2%2B1.20.1-forge.jar"
 hash-format = "sha1"
-hash = "457aab3ae1a01a8a92fa707039243c908079cbe8"
+hash = "f26fb73bdf41e8402781b5b81427d21ebd7dcfce"
 
 [update]
 [update.modrinth]
 mod-id = "x3HZvrj6"
-version = "Tju2o3p2"
+version = "IxkG37te"
