--- a/mods/jei.pw.toml
+++ b/mods/jei.pw.toml
@@ -1,13 +1,13 @@
 name = "Just Enough Items"
-filename = "jei-1.20.1-forge-15.17.0.76.jar"
+filename = "jei-1.20.1-forge-15.19.0.88.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/u6dRKJwZ/versions/zDkya1dO/jei-1.20.1-forge-15.17.0.76.jar"
+url = "https://cdn.modrinth.com/data/u6dRKJwZ/versions/AU7r69Dw/jei-1.20.1-forge-15.19.0.88.jar"
 hash-format = "sha1"
-hash = "8c5a802b39e234c764078e0a7021ec2765372b6c"
+hash = "11da73334967696d8837ae3bd2539eaf5e4b880f"
 
 [update]
 [update.modrinth]
 mod-id = "u6dRKJwZ"
-version = "zDkya1dO"
+version = "AU7r69Dw"
