--- a/mods/puzzles-lib.pw.toml
+++ b/mods/puzzles-lib.pw.toml
@@ -1,13 +1,13 @@
 name = "Puzzles Lib"
-filename = "PuzzlesLib-v8.1.22-1.20.1-Forge.jar"
+filename = "PuzzlesLib-v8.1.23-1.20.1-Forge.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/QAGBst4M/versions/WHDG4o9c/PuzzlesLib-v8.1.22-1.20.1-Forge.jar"
+url = "https://cdn.modrinth.com/data/QAGBst4M/versions/UlSkomup/PuzzlesLib-v8.1.23-1.20.1-Forge.jar"
 hash-format = "sha1"
-hash = "4a4b87f46a8f77cc09128a1a88da5f6dce7c35fc"
+hash = "dac5d9a8dbb0df2c98d4b71aa1f5ab04761ac34f"
 
 [update]
 [update.modrinth]
 mod-id = "QAGBst4M"
-version = "WHDG4o9c"
+version = "UlSkomup"
