--- a/mods/supplementaries-squared.pw.toml
+++ b/mods/supplementaries-squared.pw.toml
@@ -1,13 +1,13 @@
 name = "Supplementaries Squared"
-filename = "suppsquared-1.20-1.1.14.jar"
+filename = "suppsquared-1.20-1.1.15.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/dCCkNFwE/versions/8PXoizc7/suppsquared-1.20-1.1.14.jar"
+url = "https://cdn.modrinth.com/data/dCCkNFwE/versions/gE7SuSDM/suppsquared-1.20-1.1.15.jar"
 hash-format = "sha1"
-hash = "1b02c35166233a7d59200456603b1fc3880497aa"
+hash = "66fd2bb09c355a267feab9862e5f391210a8026b"
 
 [update]
 [update.modrinth]
 mod-id = "dCCkNFwE"
-version = "8PXoizc7"
+version = "gE7SuSDM"
