--- a/mods/wthit.pw.toml
+++ b/mods/wthit.pw.toml
@@ -1,13 +1,13 @@
 name = "WTHIT"
-filename = "wthit-forge-8.15.1.jar"
+filename = "wthit-forge-8.15.2.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/6AQIaxuO/versions/A7fnB65I/wthit-forge-8.15.1.jar"
+url = "https://cdn.modrinth.com/data/6AQIaxuO/versions/7VDdwzo9/wthit-forge-8.15.2.jar"
 hash-format = "sha1"
-hash = "e5459722fdf8fcdcd970ed305dd7486fd60747a3"
+hash = "4f5be87d9913870a1de05276afb2b5f777b93f2e"
 
 [update]
 [update.modrinth]
 mod-id = "6AQIaxuO"
-version = "A7fnB65I"
+version = "7VDdwzo9"
