--- a/mods/harvest-with-ease.pw.toml
+++ b/mods/harvest-with-ease.pw.toml
@@ -1,13 +1,13 @@
 name = "Harvest with ease"
-filename = "harvest-with-ease-forge-1.20.1-9.1.1.jar"
+filename = "harvest-with-ease-forge-1.20.1-9.2.0.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/W4Ajthd2/versions/hON90eFc/harvest-with-ease-forge-1.20.1-9.1.1.jar"
+url = "https://cdn.modrinth.com/data/W4Ajthd2/versions/NU9TW0WC/harvest-with-ease-forge-1.20.1-9.2.0.jar"
 hash-format = "sha1"
-hash = "783e03233dc18133b34ce53561ecedb6d9fb7ea4"
+hash = "90365cd907fdc59cb23f5d3186c35b345eb13829"
 
 [update]
 [update.modrinth]
 mod-id = "W4Ajthd2"
-version = "hON90eFc"
+version = "NU9TW0WC"
