--- a/mods/connector.pw.toml
+++ b/mods/connector.pw.toml
@@ -1,13 +1,13 @@
 name = "Sinytra Connector"
-filename = "Connector-1.0.0-beta.45+1.20.1.jar"
+filename = "Connector-1.0.0-beta.46+1.20.1.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/u58R1TMW/versions/j0igWmaL/Connector-1.0.0-beta.45%2B1.20.1.jar"
+url = "https://cdn.modrinth.com/data/u58R1TMW/versions/e8hSZ4vp/Connector-1.0.0-beta.46%2B1.20.1.jar"
 hash-format = "sha1"
-hash = "bcbcdcfa0260df23800d26069588073b998e65e7"
+hash = "a4ad6605706bebca9470a5affe6f44abaef5d507"
 
 [update]
 [update.modrinth]
 mod-id = "u58R1TMW"
-version = "j0igWmaL"
+version = "e8hSZ4vp"
