--- a/mods/craterlib.pw.toml
+++ b/mods/craterlib.pw.toml
@@ -1,13 +1,13 @@
 name = "CraterLib"
-filename = "CraterLib-Forge-1.20-2.1.0.jar"
+filename = "CraterLib-Forge-1.20-2.1.1.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/Nn8Wasaq/versions/i40fLjQb/CraterLib-Forge-1.20-2.1.0.jar"
+url = "https://cdn.modrinth.com/data/Nn8Wasaq/versions/lrhBfLA7/CraterLib-Forge-1.20-2.1.1.jar"
 hash-format = "sha1"
-hash = "516caf1957b9a487d4c878d3375d3a3b40e9c9c8"
+hash = "21edde855bbda93fdfab2ecbeef8aaae8998b9df"
 
 [update]
 [update.modrinth]
 mod-id = "Nn8Wasaq"
-version = "i40fLjQb"
+version = "lrhBfLA7"
