--- a/mods/emi-loot.pw.toml
+++ b/mods/emi-loot.pw.toml
@@ -1,13 +1,13 @@
 name = "EMI Loot"
-filename = "emi_loot-0.7.3+1.20.1+forge.jar"
+filename = "emi_loot-0.7.4+1.20.1+forge.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/qbbO7Jns/versions/oQKduNIL/emi_loot-0.7.3%2B1.20.1%2Bforge.jar"
+url = "https://cdn.modrinth.com/data/qbbO7Jns/versions/muA4mic3/emi_loot-0.7.4%2B1.20.1%2Bforge.jar"
 hash-format = "sha1"
-hash = "de9fdbcc53e6ab47d4876451e00ea38a8af397dd"
+hash = "07ae3bd3fe084f0a895cbeaec625a9d8e66a3812"
 
 [update]
 [update.modrinth]
 mod-id = "qbbO7Jns"
-version = "oQKduNIL"
+version = "muA4mic3"
