--- a/mods/emi.pw.toml
+++ b/mods/emi.pw.toml
@@ -1,13 +1,13 @@
 name = "EMI"
-filename = "emi-1.1.13+1.20.1+forge.jar"
+filename = "emi-1.1.16+1.20.1+forge.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/fRiHVvU7/versions/9BeUhlBt/emi-1.1.13%2B1.20.1%2Bforge.jar"
+url = "https://cdn.modrinth.com/data/fRiHVvU7/versions/lL5Etb2g/emi-1.1.16%2B1.20.1%2Bforge.jar"
 hash-format = "sha1"
-hash = "914170e531accbdb08e5a1c757d7bfdc3201b40c"
+hash = "9c25ea8378f058ac3eccf9349e88b041ae475f24"
 
 [update]
 [update.modrinth]
 mod-id = "fRiHVvU7"
-version = "9BeUhlBt"
+version = "lL5Etb2g"
