--- a/mods/fast-ip-ping.pw.toml
+++ b/mods/fast-ip-ping.pw.toml
@@ -1,13 +1,13 @@
 name = "fast-ip-ping"
-filename = "fast-ip-ping-v1.0.4-mc1.20.4-forge.jar"
+filename = "fast-ip-ping-v1.0.5-mc1.20.4-forge.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/9mtu0sUO/versions/BOVLchgc/fast-ip-ping-v1.0.4-mc1.20.4-forge.jar"
+url = "https://cdn.modrinth.com/data/9mtu0sUO/versions/lfk0K3KM/fast-ip-ping-v1.0.5-mc1.20.4-forge.jar"
 hash-format = "sha1"
-hash = "13d42a0e4fcb7b7fd1821108bf496c8901d7df3d"
+hash = "cba9a0f2b37706ae0486e74636049545580892fd"
 
 [update]
 [update.modrinth]
 mod-id = "9mtu0sUO"
-version = "BOVLchgc"
+version = "lfk0K3KM"
