--- a/mods/inventory-profiles-next.pw.toml
+++ b/mods/inventory-profiles-next.pw.toml
@@ -1,13 +1,13 @@
 name = "Inventory Profiles Next"
-filename = "InventoryProfilesNext-forge-1.20-1.10.10.jar"
+filename = "InventoryProfilesNext-forge-1.20-1.10.11.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/O7RBXm3n/versions/C2l2XSyM/InventoryProfilesNext-forge-1.20-1.10.10.jar"
+url = "https://cdn.modrinth.com/data/O7RBXm3n/versions/7ctkVhGp/InventoryProfilesNext-forge-1.20-1.10.11.jar"
 hash-format = "sha1"
-hash = "4741ea1fd6d1593b693a389b7c6e1e47690ac3ad"
+hash = "675491fa683b47cad6de4eb21707d00ffa3f559b"
 
 [update]
 [update.modrinth]
 mod-id = "O7RBXm3n"
-version = "C2l2XSyM"
+version = "7ctkVhGp"
