--- a/mods/puzzles-lib.pw.toml
+++ b/mods/puzzles-lib.pw.toml
@@ -1,13 +1,13 @@
 name = "Puzzles Lib"
-filename = "PuzzlesLib-v8.1.23-1.20.1-Forge.jar"
+filename = "PuzzlesLib-v8.1.24-1.20.1-Forge.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/QAGBst4M/versions/UlSkomup/PuzzlesLib-v8.1.23-1.20.1-Forge.jar"
+url = "https://cdn.modrinth.com/data/QAGBst4M/versions/CRWEHl5m/PuzzlesLib-v8.1.24-1.20.1-Forge.jar"
 hash-format = "sha1"
-hash = "dac5d9a8dbb0df2c98d4b71aa1f5ab04761ac34f"
+hash = "7a3b81fe360b3aafe03a658bfdc23f14f6011933"
 
 [update]
 [update.modrinth]
 mod-id = "QAGBst4M"
-version = "UlSkomup"
+version = "CRWEHl5m"
